# tachi-rev2-portfolio

./: .env.example  .gitignore  LICENSE  MCP_SETUP.md  OLLAMA_SETUP_COMPLETE.md  QUICKSTART.md  README.md  config.py  llm_factory.py  main.py  mcp_config.py  pyproject.toml  requirements.txt  test_imports.py
agents/: __init__.py  data_fetcher_agent.py  market_analyst_agent.py  portfolio_strategist_agent.py  risk_manager_agent.py  sentiment_agent.py
api/: __init__.py  server.py
crews/: __init__.py  portfolio_crew.py
docs/: PORTFOLIO_GUIDE.md
tools/: __init__.py  news_sentiment_tool.py  stock_data_tool.py  technical_indicators_tool.py
tools/tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_integration.py  test_news_sentiment_tool.py  test_stock_data_tool.py  test_technical_indicators_tool.py
